# Controllers/OpenApiControllerBase.cs
@@ -1,5 +1,7 @@
 ﻿using Microsoft.AspNetCore.Mvc;
 
+using System.Net.Mime;
+
 public class OpenApiControllerBase : ControllerBase
 {
   public List<string> responseParts { get; private set; }
@@ -24,20 +26,21 @@ public class OpenApiControllerBase : ControllerBase
     return parts;
   }
 
-  [HttpGet]
+  [Produces("application/json")]
   public IActionResult SplitedResponse(string text, int part)
   {
     var gPT4OTokenizer = new Microsoft.KernelMemory.AI.OpenAI.GPT4oTokenizer();
     var tokensCount = gPT4OTokenizer.CountTokens(text);
-    if (tokensCount > 30000)
+    if (tokensCount > 7000)
     {
-      responseParts = SplitResponse(text, 20000);
+      responseParts = SplitResponse(text, 7000);
       if (part > responseParts.Count || part < 0)
       {
         return BadRequest("Запрашиваемая часть не существует.");
       }
-      return Ok(new { is_consequential = true, content = responseParts[part - 1], part, total_parts = responseParts.Count });
+
+      return new JsonResult(new { is_consequential = true, content = responseParts[part - 1], part, total_parts = responseParts.Count });
     }
-    return Ok(text);
+    return new JsonResult(new { is_consequential = false, content = text, part = 1, total_parts = 1 });
   }
 }
